# salary_service

./: .dockerignore  .gitignore  README.md  README_ru.md  api.py  auth.py  client.py  config.ini  controller.py  create_demo_db.py  db.sqlite3  model.py  pyproject.toml  requirements.txt  run.py
tests/: conftest.py  test_auth.py  test_controller.py
