[tool.poetry]
name = "salary-service"
version = "0.1.0"
description = ""
authors = ["mephit <meph.cell@gmail.com>"]
readme = "README.md"
packages = [{include = "salary_service"}]

[tool.poetry.dependencies]
python = "^3.9"
anyio = "3.7.0"
cffi = "1.15.1"
click = "8.1.3"
cryptography = "41.0.0"
exceptiongroup = "1.1.1"
fastapi = "0.95.2"
greenlet = "2.0.2"
h11 = "0.14.0"
idna = "3.4"
jwt = "1.3.1"
peewee = "3.16.2"
pycparser = "2.21"
pydantic = "1.10.8"
pyjwt = "2.7.0"
python-multipart = "0.0.6"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.6.2"
uvicorn = "0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
